# iotool

./: .gitignore  CMakeLists.txt  README.md  client_server_commands.txt  configuration_guide.md  find-compiler.sh  iotool.code-workspace  sampling_task.json  send-to-device.sh  shell_syntax.md  shell_syntax.txt  synapsense.todo  toolchain.cmake
lib/common/: CMakeLists.txt  I2cTransaction.cpp  SpiTransaction.cpp  Strings.cpp  result.cpp
lib/common/include/common/: Adc.hpp  Board.hpp  Configurable.hpp  Dac.hpp  DeviceMapper.hpp  DigitalIn.hpp  DigitalOut.hpp  I2cTransaction.hpp  Indicator.hpp  NoCopy.h  Peripheral.hpp  PeripheralType.hpp  PinMapper.hpp  PowerMonitor.hpp  SpiTransaction.hpp  Strings.hpp  adc.hpp  basic_peripheral.hpp  configurable_resource.hpp  dac.hpp  digital_output.hpp  do_bt.cpp  indicator.hpp  pin_mapper.hpp  power_monitor.hpp  result.hpp
lib/drivers/: Ads126x.cpp  BasicDin.cpp  BasicDout.cpp  CMakeLists.txt  GpioBus.cpp  Ina21x.cpp  Max518x.cpp  ads126x.cpp  ads126x_defs.hpp  emulated_adc.cpp  ina21x.cpp  max581x.cpp
lib/drivers/include/drivers/: Ads126x.hpp  BasicDin.hpp  BasicDout.hpp  GpioBus.hpp  Ina21x.hpp  Max518x.hpp  ads126x.hpp  cmd_ads126x_cal.hpp  emulated_adc.hpp
lib/libcbsl/: CMakeLists.txt
lib/libcbsl/cbsl/: CMakeLists.txt  Changelog  Timeout.cpp  Timeout.h  addrmap.h  any_data.hpp  base64.c  cbsl-trunk.kdev4  crc.c  fifo.h  fs_ops.h  hoststats.cpp  hoststats.h  id_pool.hpp  keyval.cpp  keyval.hpp  logger.c  logger.h  mutex.hpp  nocopy.hpp  nwk_print.h  one_shot.cpp  one_shot.h  result.hpp  runnable.hpp  runner.hpp  runner_pool.cpp  runner_pool.hpp  rwlock.h  shellHelpers.cpp  shellHelpers.h  static_fifo.hpp  static_list.h  strings.cpp  strings.hpp  syncfifo.h  thread.cpp  thread.hpp  thread_sync.hpp  threadpooltask.cpp  (+10 more)
lib/libcbsl/cbsl/.kdev4/: cbsl-trunk.kdev4
lib/libcbsl/cbsl/.svn/: wc.db
lib/libcbsl/cbsl/cksum/: ieee_crc32.h
lib/libcbsl/cbsl/net/: arp_querier.hpp  ftp_transfer.c  ftp_transfer.h  name_resolver.cpp  name_resolver.hpp  sock_addr_4.cpp  ssl_connection.cpp  ssl_connection.hpp  tcp_connection.hpp  udp_skt.cpp  udp_skt.hpp
lib/libcbsl/cbsl/tests/: CMakeLists.txt  test_keyval.cpp
lib/librpn/: Argument.cpp  CMakeLists.txt  addons-readme.md  basic_instruction.hpp  builtin_instruction_handlers.cpp  builtin_instruction_handlers.hpp  context_impl.cpp  context_impl.hpp  rpn_lib.cpp
lib/librpn/include/rpn/: Argument.h  ArgumentList.cpp  ArgumentList.h  (+8 more)
lib/librps/: AbstractCommand.cpp  Argument.cpp  ArgumentList.cpp  BuiltinCommands.cpp  CMakeLists.txt  Command.cpp  CommandTree.cpp  Context.cpp  Decoder.cpp  Stack.cpp  StreamAdapter.cpp
lib/librps/doc/: librps.md
src/: CMakeLists.txt  acquisition_scheduler_factory.cpp  acquisition_scheduler_factory.hpp  ads126x-util.cpp  connected_io_client.hpp  csv_writer.cpp  csv_writer.hpp  data_sender.cpp  data_sender.hpp  io_core.cpp  io_core.hpp  iotool.cpp  iotool_config.hpp  job_manager.cpp  job_manager.hpp  logger_shell_provider.cpp  logger_shell_provider.hpp  output_channel_holder.hpp  output_channel_manager.cpp  output_channel_manager.hpp  periodic_scheduler.cpp  periodic_scheduler.hpp  synapsense.todo  tcp_data_server.cpp  tcp_data_server.hpp  tcp_server.cpp  tcp_server.hpp
src/applets/: CMakeLists.txt  applet_factory.cpp  cmd_adc_isource.hpp  cmd_adc_read.hpp  cmd_dac_set_out.hpp  cmd_device_info.hpp  cmd_exit.hpp  cmd_led_set.hpp  cmd_led_status.hpp  cmd_pm_state.hpp  cmd_relay_set.hpp  cmd_relay_status.hpp
src/automata/: CMakeLists.txt  job.cpp  job.hpp
src/benchmarks/: CMakeLists.txt  csv_writer_benchmark.cpp  rpn_benchmark.cpp
src/board/: Board.cpp
src/board/agp01/: Agp01Board.cpp  Agp01Board.hpp  Agp01Leds.cpp  Agp01Leds.hpp  Agp01PinMapper.hpp  Agp01Relays.cpp  Agp01Relays.hpp  CMakeLists.txt  acme-a5.hpp  agp01_indicators.hpp  agp01_relays.hpp
src/board/emulator/: CMakeLists.txt  EmulatorBoard.cpp  EmulatorBoard.hpp  board_factory.cpp
src/brd/: CMakeLists.txt  board_factory.cpp
src/brd/agp01/: CMakeLists.txt  acme-a5.hpp  agp01_indicators.cpp  agp01_indicators.hpp  agp01_relays.cpp  agp01_relays.hpp  agripino.cpp  agripino.hpp  board_factory.cpp
src/brd/emulator/: CMakeLists.txt  board_factory.cpp  emulator_board.cpp  emulator_board.hpp
src/common/: CMakeLists.txt  peripheral_type.cpp  result.cpp
src/drivers/: CMakeLists.txt  ads126x.cpp  ads126x_defs.hpp  emulated_adc.cpp  ina21x.cpp  max581x.cpp  sysfs_gpio.cpp
src/hal/: CMakeLists.txt
src/jobs/: CMakeLists.txt  csv_writer.cpp  job.cpp  job.hpp  output_channel_manager.cpp  transform_job.cpp  transform_job.hpp
src/jobs/include/: csv_writer.hpp  job.hpp  output_channel_manager.hpp  transform_job.hpp
src/rpn-processor/: CMakeLists.txt  addons-readme.md  basic_instruction.hpp  builtin_instruction_handlers.cpp  builtin_instruction_handlers.hpp  context_impl.cpp  context_impl.hpp  instruction_catalog.hpp  rpn_lib.cpp  script_impl.cpp  script_impl.hpp  subroutine.cpp  subroutine.hpp  variable.hpp
src/shell/: CMakeLists.txt  ConnecedTelnetClient.hpp  ParseLine.cpp  ParseLine.hpp  PeripheralCmdProvider.cpp  PeripheralCmdProvider.hpp  ShellFrontend.cpp  ShellFrontend.hpp  TelnetSessionFactory.hpp  TelnetStreamAdapter.cpp  TelnetStreamAdapter.hpp  accumulator_bucket.cpp  command_help.hpp  periodic_scheduler.cpp  periodic_scheduler.hpp  shell_backend.cpp  shell_backend_core.cpp  shell_backend_core.hpp  shell_backend_factory.cpp  shell_backend_impl.hpp  shell_engine.cpp  shell_frontend.cpp  shell_peripheral_provider.cpp  shell_script_runner.hpp  socket_stream_adapter.hpp
src/shell-common/: CMakeLists.txt  shell_frontend.cpp
src/shell/commands/: AllCommands.cpp  AllCommands.h  CmdAdcIsource.hpp  CmdAdcRead.hpp  CmdCd.cpp  CmdCd.hpp  CmdDacSet.hpp  CmdDinList.cpp  CmdDinList.hpp  CmdDinRead.hpp  CmdHelp.cpp  CmdHelp.hpp  CmdLedSet.hpp  CmdLedStatus.hpp  CmdLogger.cpp  CmdLogger.hpp  CmdPmState.hpp  CmdRelaySet.hpp  CmdRelayStatus.hpp  CmdShow.cpp  CmdShow.hpp  cmd_dac_set_out.hpp  cmd_device_info.hpp  cmd_exit.hpp  cmd_led_set.hpp  cmd_led_status.hpp  cmd_relay_set.hpp  cmd_relay_status.hpp
(+107 files in other folders)
